Fix size of scrollbar thumb. Display first image in list of photos

--- a/main.css
+++ b/main.css
@@ -98,6 +98,7 @@ footer {
 }
     footer::-webkit-scrollbar {
         background-color:#272727;
+        height:10px;
     }
     footer::-webkit-scrollbar-thumb {
         background-color:#272727;
